@@ -1,3 +1,15 @@
+2012-08-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR1289: Allow JARs to be optionally compressed by
+	setting COMPRESS_JARS
+	* Makefile.am:
+	(ICEDTEA_ENV): Add COMPRESS_JARS="true" if
+	ENABLE_JAR_COMPRESSION is set.
+	* NEWS: Updated.
+	* acinclude.m4:
+	(IT_ENABLE_JAR_COMPRESSION): Added.
+	* configure.ac: Include new macro.
+
 2013-06-06  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	* Makefile.am:
